--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,10 @@ variables:
   DOCKER_HOST: "tcp://docker:2375"
   DOCKER_TLS_CERTDIR: ""
   DOCKER_DRIVER: overlay2
-  BUILD_VERSION: ${CI_COMMIT_REF_NAME}-${CI_PIPELINE_ID}
-  RELEASE_VERSION: ${BUILD_VERSION}
+#  BUILD_VERSION: ${CI_COMMIT_REF_NAME}-${CI_PIPELINE_ID}
+#  RELEASE_VERSION: ${BUILD_VERSION}
+
+  REVISION: 2.0-SNAPSHOT
 
 services:
   - name: docker:dind
@@ -81,14 +83,15 @@ utest:backend:
     - gpg --list-keys
   script:
     # For reproducible builds, we have to run the build twice:
-    - mvn $MAVEN_CLI_OPTS clean install -DskipTests
-    - mvn $MAVEN_CLI_OPTS clean verify artifact:compare -DskipTests
-    - mvn $MAVEN_CLI_OPTS --settings ci_settings.xml --activate-profiles deploy,$MAVEN_PROFILE deploy -DskipTests
+    - mvn $MAVEN_CLI_OPTS -Drevision=$REVISION clean install -DskipTests
+    - mvn $MAVEN_CLI_OPTS -Drevision=$REVISION clean verify artifact:compare -DskipTests
+    - mvn $MAVEN_CLI_OPTS -Drevision=$REVISION --settings ci_settings.xml --activate-profiles deploy,$MAVEN_PROFILE deploy -DskipTests
 
 deploy:foreach:
   extends:
     - .deploy
   variables:
+    REVISION: 2.0-test-SNAPSHOT
     MAVEN_PROFILE: foreach
   rules:
     - if: $CI_COMMIT_TAG == null
@@ -97,6 +100,7 @@ deploy:sonatype:
   extends:
     - .deploy
   variables:
+    REVISION: 2.0-SNAPSHOT
     MAVEN_PROFILE: sonatype
   rules:
     - if: $CI_COMMIT_TAG =~ /^v.*/
