--- a/common-concurrent/pom.xml
+++ b/common-concurrent/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <artifactId>common-projects</artifactId>
         <groupId>com.foreach.libs</groupId>
-	    <version>2.0.0-SNAPSHOT</version>
+	    <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
