--- a/common-mybatis/pom.xml
+++ b/common-mybatis/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>com.foreach.libs</groupId>
 		<artifactId>common-projects</artifactId>
-		<version>2.0.0-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 	<dependencies>
 		<dependency>
