--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ variables:
 #  BUILD_VERSION: ${CI_COMMIT_REF_NAME}-${CI_PIPELINE_ID}
 #  RELEASE_VERSION: ${BUILD_VERSION}
 
-  REVISION: 2.0-SNAPSHOT
+  #REVISION: 2.0-SNAPSHOT
 
 services:
   - name: docker:dind
@@ -71,7 +71,8 @@ utest:backend:
 #  environment:
 #    name: snapshot
 
-.deploy:
+#.deploy:
+deploy:
   stage: deploy
   variables:
     TZ: "UTC" # Generally recommended for reproducible builds, and we're skipping tests in this job anyway.
@@ -81,26 +82,35 @@ utest:backend:
     - apt-get -y install gpg
     - gpg --pinentry-mode loopback --passphrase $ACROSS_GPG_PASSPHRASE --import $ACROSS_GPG_PRIVATE_KEY
     - gpg --list-keys
-  script:
+  script: |
+    if [[ -n $CI_COMMIT_TAG ]]
+    then
+      # We are triggered because a tag has been pushed
+      export MAVEN_PROFILE=sonatype
+      export REVISION=echo $TAG | cut -c2-
+    else
+      # It's a regular branch push
+      export MAVEN_PROFILE=foreach
+      # We leave the REVISION var empty, so maven uses the default in the <revision> property in the pom.xml file
+    fi
     # For reproducible builds, we have to run the build twice:
-    - mvn $MAVEN_CLI_OPTS -Drevision=$REVISION clean install -DskipTests
-    - mvn $MAVEN_CLI_OPTS -Drevision=$REVISION clean verify artifact:compare -DskipTests
-    - mvn $MAVEN_CLI_OPTS -Drevision=$REVISION --settings ci_settings.xml --activate-profiles deploy,$MAVEN_PROFILE deploy -DskipTests
+    mvn $MAVEN_CLI_OPTS -Drevision=$REVISION clean install -DskipTests
+    mvn $MAVEN_CLI_OPTS -Drevision=$REVISION clean verify artifact:compare -DskipTests
+    mvn $MAVEN_CLI_OPTS -Drevision=$REVISION --settings ci_settings.xml --activate-profiles deploy,$MAVEN_PROFILE deploy -DskipTests
 
-deploy:foreach:
-  extends:
-    - .deploy
-  variables:
-    REVISION: 2.0-test-SNAPSHOT
-    MAVEN_PROFILE: foreach
-  rules:
-    - if: $CI_COMMIT_TAG == null
-
-deploy:sonatype:
-  extends:
-    - .deploy
-  variables:
-    REVISION: 2.0-SNAPSHOT
-    MAVEN_PROFILE: sonatype
-  rules:
-    - if: $CI_COMMIT_TAG =~ /^v.*/
+#deploy:foreach:
+#  extends:
+#    - .deploy
+#  variables:
+#    MAVEN_PROFILE: foreach
+#  rules:
+#    - if: $CI_COMMIT_TAG == null
+#
+#deploy:sonatype:
+#  extends:
+#    - .deploy
+#  variables:
+#    REVISION: 2.0-SNAPSHOT
+#    MAVEN_PROFILE: sonatype
+#  rules:
+#    - if: $CI_COMMIT_TAG =~ /^v.*/
